--- a/angular-web-app/src/app/components/maps/maps.component.html
+++ b/angular-web-app/src/app/components/maps/maps.component.html
@@ -12,10 +12,9 @@
             ></iframe>
           </div>
         </div>
-
         <div class="col-md-4 d-flex align-items-center">
           <app-info-card
-            [title]="'Find us here'"
+            [title]="'Pay a visit'"
             [text]="'Oeverlanden 60, 9606RR Kropswolde'"
             [icon]="'pin_drop'"
           ></app-info-card>
