--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -1,47 +1,70 @@
-
 <!-- Header small -->
 <app-header [title]="title" [subTitle]="subTitle" [small]="true"></app-header>
 
 <!-- Main -->
 <main id="contact" class="main main-raised">
+  <!-- Contact -->
+  <section class="page-section bg-light">
+    <div class="container">
+      <app-section-title
+        [title]="'Contact'"
+        [subTitle]="'How to reach me'"
+      ></app-section-title>
 
-    <!-- Contact -->
-    <section class="page-section bg-light">
-      <div class="container">
-        <app-section-title
-          [title]="'Contact'"
-          [subTitle]="'How to reach me'"
-        ></app-section-title>
-  
-        <div class="row">
-          <div class="col-md-6">
-            <app-contact-card></app-contact-card>
-          </div>
-          <div class="col-md-4 ml-auto">
-            <app-info-card
-            [title]="'Find us here'"
-            [text]="'Oeverlanden 60, 9606RR Kropswolde'"
-            [icon]="'pin_drop'"
-            ></app-info-card>
-            <app-info-card
-            [title]="'Give us a call'"
-            [text]="'06 12345678'"
-            [icon]="'phone'"
-          ></app-info-card>
-          </div>
+      <div class="row">
+        <div
+          *ngFor="let contactcard of contactcards"
+          class="col-lg-4 col-md-6 col-sm-12"
+        >
+          <!-- Service cards -->
+          <app-service-card [service]="contactcard"></app-service-card>
         </div>
-  
       </div>
-    </section>
+    </div>
+  </section>
 
-  <!-- Location -->
+  <!-- Form -->
   <section class="page-section">
     <div class="container">
+      <app-section-title
+        [title]="'Contact form'"
+        [subTitle]="'Send a message'"
+        [text]="
+          'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'
+        "
+      ></app-section-title>
 
+      <div class="row">
+        <div class="col-md-6">
+          <app-contact-card></app-contact-card>
+        </div>
+        <div class="col-md-4 ml-auto">
+          <div class="d-flex flex-column justify-content-center h-100">
+            <app-info-card
+              [title]="'Send an email'"
+              [text]="'info@spavento.nl'"
+              [icon]="'email'"
+            ></app-info-card>
+            <app-info-card
+              [title]="'Give a call'"
+              [text]="'+31 6 12345678'"
+              [icon]="'phone'"
+            ></app-info-card>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Location -->
+  <section class="page-section bg-light">
+    <div class="container">
       <app-section-title
         [title]="'Location'"
         [subTitle]="'Where to find me'"
-        [text]="'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'"
+        [text]="
+          'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'
+        "
       ></app-section-title>
 
       <div class="row">
@@ -49,11 +72,6 @@
           <app-maps></app-maps>
         </div>
       </div>
-
     </div>
   </section>
-
-
-
 </main>
-
