--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -1,28 +1,18 @@
-<mat-card class="">
-  <mat-card-content>
-    <h2 class="title-underlined">Images</h2>
-    
-    <!-- Image -->
-    <div class="selected-image-wrapper p-2">
-      <img class="selected-image mat-elevation-z4" src="{{selectedImage}}" alt="painting">
-    </div>
 
-    <!-- Image carousel -->
-    <ngu-carousel #imageCarousel [inputs]="carouselConfig" [dataSource]="images">
-      <div *nguCarouselDef="let image;" class="item p-2">
-        <a class="img-carousel-box" (click)="setSelectedImage(image)">
-          <img class="carousel-image mat-elevation-z4" src="{{image}}" alt="thumbnail"/>
-        </a>
+<mat-card>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <ngb-carousel *ngIf="images">
+          <ng-template ngbSlide *ngFor="let image of images">
+            <div class="d-flex flex-column align-items-center justify-content-center img-wrapper">
+              <img [src]="image" class="slider-img">
+            </div>
+          </ng-template>
+        </ngb-carousel>
       </div>
-      <button mat-fab NguCarouselNext class="rightRs mat-elevation-z0" [style.opacity]="imageCarousel.isLast ? 0.5:1">
-        <mat-icon>keyboard_arrow_right</mat-icon>
-      </button>
-      <button mat-fab NguCarouselPrev class="leftRs mat-elevation-z0" [style.opacity]="imageCarousel.isFirst ? 0.5:1">
-        <mat-icon>keyboard_arrow_left</mat-icon>
-      </button>
-    </ngu-carousel>
-
-  </mat-card-content>
+    </div>
+  </div>
 </mat-card>
 
 
