--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -38,37 +38,7 @@
         <div class="col-md-6">
           <app-contact-card></app-contact-card>
         </div>
-        <div class="col-md-4 ml-auto">
-          <div class="d-flex flex-column justify-content-center h-100">
-            <app-info-card
-              [title]="'Send an email'"
-              [text]="'info@spavento.nl'"
-              [icon]="'email'"
-            ></app-info-card>
-            <app-info-card
-              [title]="'Give a call'"
-              [text]="'+31 6 12345678'"
-              [icon]="'phone'"
-            ></app-info-card>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Location -->
-  <section class="page-section bg-light">
-    <div class="container">
-      <app-section-title
-        [title]="'Location'"
-        [subTitle]="'Where to find me'"
-        [text]="
-          'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'
-        "
-      ></app-section-title>
-
-      <div class="row">
-        <div class="col-12">
+        <div class="col-md-6">
           <app-maps></app-maps>
         </div>
       </div>
