--- a/angular-web-app/src/app/components/featured/featured.component.html
+++ b/angular-web-app/src/app/components/featured/featured.component.html
@@ -9,7 +9,7 @@
       <mat-card-content class="p-4 text-center">
         <h2 class="">{{ painting.title }}</h2>
         <h6 class="font-italic mb-3 txt-primary">By {{ painting.artist}}.</h6>
-        <p class="pt-2">{{ getTrimmedDescription() }}</p>
+        <!-- <p class="pt-2">{{ getTrimmedDescription() }}</p> -->
         <div class="portfolio-project-buttons">
           <button
             mat-fab
