--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -8,7 +8,6 @@
 
 html, body {
   width: 100%;
-  height: 100%;
   margin: 0;
   font-family: 'Poppins', sans-serif;
   font-size: 1rem;
@@ -124,6 +123,8 @@ button {
 
 .ngucarousel-items .item {
   padding: 0px 28px;
+  display: flex;
+  align-items: center;
 }
 
 .leftRs {
