--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -1,196 +1,92 @@
-<!-- Filters expandable -->
-<div class="row" style="display: none;">
-  <div class="col-12">
-    <mat-expansion-panel class="bg-light mat-elevation-z4">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <mat-icon class="mr-2">filter_list</mat-icon>
-          Filters
-        </mat-panel-title>
-        <mat-panel-description
-          >Selected:
-          {{
-            activeFilters.categories.length +
-              activeFilters.paints.length +
-              activeFilters.states.length
-          }}</mat-panel-description
-        >
-      </mat-expansion-panel-header>
-      <div class="container">
-        <!-- Filters -->
-        <div class="row">
-          <!-- Categories -->
-          <div class="col-lg-3 col-sm-6">
-            <mat-list class="pb-2">
-              <div mat-subheader class="txt-primary">Category</div>
-              <mat-list-item *ngFor="let category of categories">
-                <button
-                  mat-raised-button
-                  color="accent"
-                  class="mx-2 rounded-pill filter-button"
-                  [class.active]="
-                    activeFilters.categories.indexOf(category) !== -1
-                  "
-                  (click)="setFilter('categories', category)"
-                >
-                  {{ category }}
-                </button>
-              </mat-list-item>
-            </mat-list>
-          </div>
-
-          <!-- Paints -->
-          <div class="col-lg-3 col-sm-6">
-            <mat-list class="pb-2">
-              <div mat-subheader class="txt-primary">Paint</div>
-              <mat-list-item *ngFor="let paint of paints">
-                <button
-                  mat-raised-button
-                  color="accent"
-                  class="mx-2 rounded-pill filter-button"
-                  [class.active]="activeFilters.paints.indexOf(paint) !== -1"
-                  (click)="setFilter('paints', paint)"
-                >
-                  {{ paint }}
-                </button>
-              </mat-list-item>
-            </mat-list>
-          </div>
-
-          <!-- States -->
-          <div class="col-lg-3 col-sm-6">
-            <mat-list class="pb-2">
-              <div mat-subheader class="txt-primary">State</div>
-              <mat-list-item *ngFor="let state of states">
-                <button
-                  mat-raised-button
-                  color="accent"
-                  class="mx-2 rounded-pill filter-button"
-                  [class.active]="activeFilters.states.indexOf(state) !== -1"
-                  (click)="setFilter('states', state)"
-                >
-                  {{ state }}
-                </button>
-              </mat-list-item>
-            </mat-list>
-          </div>
-
-          <div class="col-lg-3 col-sm-6">
-            <mat-list class="pb-2">
-              <div mat-subheader class="txt-primary">Show all</div>
-              <mat-list-item>
-                <button
-                  mat-raised-button
-                  color="accent"
-                  class="mx-2 rounded-pill filter-button"
-                  [class.active]="
-                    activeFilters.categories.length == 0 &&
-                    activeFilters.paints.length == 0 &&
-                    activeFilters.states.length == 0
-                  "
-                  (click)="resetFilters()"
-                >
-                  All
-                </button>
-              </mat-list-item>
-            </mat-list>
-          </div>
-        </div>
-      </div>
-    </mat-expansion-panel>
-  </div>
-</div>
-
 <div class="row">
-  <div class="col-3">
-    <button
-      mat-raised-button
-      color="accent"
-      class="mx-2 rounded-pill filter-button"
-      [class.active]="
-        activeFilters.categories.length == 0 &&
-        activeFilters.paints.length == 0 &&
-        activeFilters.states.length == 0
-      "
-      (click)="resetFilters()"
-    >
-      All
-    </button>
-  </div>
-
-  <div class="col-3">
-    <mat-expansion-panel class="bg-light mat-elevation-z4">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <mat-icon class="mr-2">category</mat-icon>
-          Category
-        </mat-panel-title>
-        <mat-panel-description *ngIf="activeFilters.categories.length">( {{ activeFilters.categories.length }} )</mat-panel-description>
-      </mat-expansion-panel-header>
-      <mat-list class="pb-2">
-        <mat-list-item *ngFor="let category of categories">
-          <button
-            mat-raised-button
-            color="accent"
-            class="mx-2 rounded-pill filter-button"
-            [class.active]="activeFilters.categories.indexOf(category) !== -1"
-            (click)="setFilter('categories', category)"
+  <div class="col-12">
+    <div class="d-flex justify-content-center">
+      <mat-expansion-panel class="bg-light mat-elevation-z4 filter-panel">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <mat-icon class="mr-2">category</mat-icon>
+            Category
+          </mat-panel-title>
+          <mat-panel-description *ngIf="activeFilters.categories.length">
+            ({{ activeFilters.categories.length }})
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-selection-list
+          #categorylist
+          [(ngModel)]="activeFilters.categories"
+          (ngModelChange)="updateFilters()"
+        >
+          <mat-list-option
+            color="primary"
+            checkboxPosition="after"
+            *ngFor="let category of categories"
+            [value]="category"
           >
             {{ category }}
-          </button>
-        </mat-list-item>
-      </mat-list>
-    </mat-expansion-panel>
-  </div>
+          </mat-list-option>
+        </mat-selection-list>
+      </mat-expansion-panel>
 
-  <div class="col-3">
-    <mat-expansion-panel class="bg-light mat-elevation-z4">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <mat-icon class="mr-2">brush</mat-icon>
-          Paint
-        </mat-panel-title>
-        <mat-panel-description *ngIf="activeFilters.paints.length">( {{ activeFilters.paints.length }} )</mat-panel-description>
-      </mat-expansion-panel-header>
-      <mat-list class="pb-2">
-        <mat-list-item *ngFor="let paint of paints">
-          <button
-            mat-raised-button
-            color="accent"
-            class="mx-2 rounded-pill filter-button"
-            [class.active]="activeFilters.paints.indexOf(paint) !== -1"
-            (click)="setFilter('paints', paint)"
+      <mat-expansion-panel class="bg-light mat-elevation-z4 filter-panel">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <mat-icon class="mr-2">brush</mat-icon>
+            Paint
+          </mat-panel-title>
+          <mat-panel-description *ngIf="activeFilters.paints.length">
+            ({{ activeFilters.paints.length }})
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-selection-list
+          #paintlist
+          [(ngModel)]="activeFilters.paints"
+          (ngModelChange)="updateFilters()"
+        >
+          <mat-list-option
+            color="primary"
+            checkboxPosition="after"
+            *ngFor="let paint of paints"
+            [value]="paint"
           >
             {{ paint }}
-          </button>
-        </mat-list-item>
-      </mat-list>
-    </mat-expansion-panel>
-  </div>
+          </mat-list-option>
+        </mat-selection-list>
+      </mat-expansion-panel>
 
-  <div class="col-3">
-    <mat-expansion-panel class="bg-light mat-elevation-z4">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <mat-icon class="mr-2">local_offer</mat-icon>
-          State
-        </mat-panel-title>
-        <mat-panel-description *ngIf="activeFilters.states.length">( {{ activeFilters.states.length }} )</mat-panel-description>
-      </mat-expansion-panel-header>
-      <mat-list class="pb-2">
-        <mat-list-item *ngFor="let state of states">
-          <button
-            mat-raised-button
-            color="accent"
-            class="mx-2 rounded-pill filter-button"
-            [class.active]="activeFilters.states.indexOf(state) !== -1"
-            (click)="setFilter('states', state)"
+      <mat-expansion-panel class="bg-light mat-elevation-z4 filter-panel">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <mat-icon class="mr-2">local_offer</mat-icon>
+            State
+          </mat-panel-title>
+          <mat-panel-description *ngIf="activeFilters.states.length">
+            ({{ activeFilters.states.length }})
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-selection-list
+          #statelist
+          [(ngModel)]="activeFilters.states"
+          (ngModelChange)="updateFilters()"
+        >
+          <mat-list-option
+            color="primary"
+            checkboxPosition="after"
+            *ngFor="let state of states"
+            [value]="state"
           >
             {{ state }}
-          </button>
-        </mat-list-item>
-      </mat-list>
-    </mat-expansion-panel>
+          </mat-list-option>
+        </mat-selection-list>
+      </mat-expansion-panel>
+
+      <button
+        mat-raised-button
+        class="reset-button bg-light mat-elevation-z4"
+        (click)="resetFilters()"
+      >
+        <mat-icon>replay</mat-icon>
+      </button>
+    </div>
   </div>
 </div>
 
