--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -65,26 +65,10 @@ button::-moz-focus-inner {
 /*************************************/
 /**             Buttons             **/
 /*************************************/
-
-button {
-  min-width: 10px !important;
-}
-
-.filter-button {
-  background-color: transparent !important;
-  color: $color-dark !important;
-  box-shadow: none !important;
-}
-
-.filter-button:hover {
-  background-color: rgba(0, 0, 0, 0.03) !important;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05), 0 1px 6px rgba(0, 0, 0, 0.1) !important;
-}
-
-.filter-button.active {
-  background-color: $color-secondary !important;
-  color: $color-light !important;
-  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
+.reset-button {
+  width: 48px;
+  height: 48px;
+  margin: 0px 1rem !important;
 }
 
 /*************************************/
