--- a/angular-web-app/src/app/components/gallery/gallery.component.scss
+++ b/angular-web-app/src/app/components/gallery/gallery.component.scss
@@ -1,14 +1,8 @@
 @import "../../../variables.scss";
 
-@media (max-width: 575px) {
-  .row > [class*="col-"] {
-    padding-left: 8px;
-    padding-right: 8px;
-  }
-}
-
-.filter-panel {
-  width: max-content;
-  height: max-content;
-  margin: 0px 1rem;
-}
+// @media (max-width: 575px) {
+//   .row > [class*="col-"] {
+//     padding-left: 8px;
+//     padding-right: 8px;
+//   }
+// }
