--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -24,7 +24,11 @@
             <app-carousel-img [paintingId]="painting.id"></app-carousel-img>
           </div>
         </div>
+      </div>
+    </section>
 
+    <section class="page-section">
+      <div class="container">
         <div class="row">
           <div class="col-6">
             <mat-card class="card-clean">
